# OmniBotCRM

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  reset_alembic.sql  reset_db.py
.agents/: AGENTS.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/ai/: __init__.py  models.py  router.py  service.py
backend/app/ai/providers/: anthropic.py  base.py  ollama.py  openai.py
backend/app/analytics/: router.py  schemas.py
backend/app/auth/: router.py
backend/app/automations/: __init__.py  engine.py  models.py  router.py  scheduler.py  schemas.py  service.py
backend/app/core/: __init__.py  config.py  database.py  events.py  exceptions.py  middleware.py  pagination.py  permissions.py  security.py
backend/app/crm/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/messaging/: __init__.py  models.py  router.py  schemas.py  service.py  websocket.py
backend/app/messaging/channels/: email_smtp.py  facebook_client.py  meta_client.py  sms_twilio.py  voice_twilio.py  whatsapp_client.py
backend/app/messaging/drivers/: __init__.py
backend/app/messaging/drivers/chatwoot/: __init__.py  client.py
backend/app/messaging/webhooks/: chatwoot.py  facebook.py  meta.py  whatsapp.py
backend/app/payments/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/reputation/: __init__.py  models.py  router.py
backend/app/scheduling/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/social/: __init__.py  models.py  router.py
backend/app/tenants/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/scripts/: seed_auth.py
(+46 files in other folders)
