[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnibot-platform"
version = "0.1.0"
description = "AI Customer Operations Platform"
requires-python = ">=3.11"
dependencies = [
    # API & Async
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "httpx>=0.27.0",
    
    # Database
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "greenlet>=3.0.3",
    
    # Security & Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.8",
    "python-keycloak>=4.1.0",
    
    # Validation & Settings
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    
    # Utilities
    "redis>=5.0.7",
    "tenacity>=8.4.1",
    "python-multipart>=0.0.9",
    "python-telegram-bot>=21.3",
    "openai>=1.35.0",
    
    # Messaging
    "twilio>=9.1.1",
    "aiosmtplib>=3.0.1",
    "aioimaplib>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0", # needed for TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".git", "__pycache__", ".venv", "migrations/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
